2007-02-07  Damon Chaplin  <damon@gnome.org>

	* gtk-doc.make: make $(DOC_MODULE)-sections.txt and
	$(DOC_MODULE)-overrides.txt depend on scan-build.stamp, so that
	parallel make works. #404122, Ed Catmur.

2007-02-07  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scangobj.in: don't return if !G_TYPE_IS_OBJECT (object_type)
	as that means interface properties don't get output. This was broken
	by the patch for #348058.

2007-01-21  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in: added "--default-includes" option to specify the
	default "#include"s to place at the top of the synopsis of each
	section. Normally this is specified in a <INCLUDE>...</INCLUDE> line
	in MODULE-sections.txt, but if you are using the "--rebuild-sections"
	option to automatically rebuild the MODULE-sections.txt file you can't
	use that. #395023.

2007-01-21  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mktmpl.in (ReadTemplateFile): 
	* gtkdoc-mkdb.in (ReadTemplateFile): improved param regexp to handle
	weird macro vararg names like "format...". #398971.

2007-01-16  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in: support "Include" setting in section docs in source
	code, same as <INCLUDE>...</INCLUDE> setting in sections.txt file.
	Part of #395023.

2007-01-16  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (OutputMacro): try to line up multiple lines of
	arguments if possible. #384249

2007-01-16  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scan.in (ScanHeader): for headers marked private, return
	immediately so we don't add anything to the sections file. #395005.

2007-01-16  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in: a number of changes to help when adding example code
	to the docs (#368382):

	 a) Support CDATA in source code comments. (We don't touch anything in
	    CDATA.)
	 b) Support |[ ... ]| to include example code. (Just gets converted to
            <informalexample><programlisting>)