@@ -1,3 +1,8 @@
+2007-02-07  Stefan Kost  <ensonic@users.sf.net>
+
+	* style.css: fixing footnote subscripts, make tables look nicer.
+	#405051
+
 2007-02-07  Damon Chaplin  <damon@gnome.org>
 
 	* gtk-doc.make: make $(DOC_MODULE)-sections.txt and
